6.3: Create reading
